Switched from jeditable to custom code for menu update UI

--- a/webroot/css/vendor.css
+++ b/webroot/css/vendor.css
@@ -1,3 +1,200 @@
+@font-face {
+  font-family: "xtreme-icons";
+  src: url("../files/xtreme-icons/xtreme-icons.eot");
+  src: url("../files/xtreme-icons/xtreme-icons.eot?#iefix") format("embedded-opentype"), url("../files/xtreme-icons/xtreme-icons.woff") format("woff"), url("../files/xtreme-icons/xtreme-icons.ttf") format("truetype"), url("../files/xtreme-icons/xtreme-icons.svg#xtreme-icons") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+[data-icon]:before {
+  font-family: "xtreme-icons" !important;
+  content: attr(data-icon);
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "xtreme-icons" !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+span.icon-hn-inline {
+  position: relative;
+  top: 0.15em;
+  padding-left: 0.3rem; }
+
+.icon-cancel:before {
+  content: "a"; }
+
+.icon-double:before {
+  content: "b"; }
+
+.icon-full:before {
+  content: "c"; }
+
+.icon-left-side:before {
+  content: "d"; }
+
+.icon-right-side:before {
+  content: "e"; }
+
+.icon-checked:before {
+  content: "f"; }
+
+.icon-unchecked:before {
+  content: "g"; }
+
+.icon-shopping:before {
+  content: "h"; }
+
+.icon-facebook:before {
+  content: "j"; }
+
+.icon-gplus:before {
+  content: "k"; }
+
+.icon-twitter:before {
+  content: "l"; }
+
+.icon-settings:before {
+  content: "m"; }
+
+.icon-favorites:before {
+  content: "n"; }
+
+.icon-share:before {
+  content: "i"; }
+
+.icon-circle-arrow-r:before {
+  content: "o"; }
+
+.icon-circle-arrow-l:before {
+  content: "p"; }
+
+.icon-tab-arrow-l:before {
+  content: "q"; }
+
+.icon-generic-pizza:before {
+  content: "r"; }
+
+.icon-salads:before {
+  content: "s"; }
+
+.icon-assorted-fingers:before {
+  content: "t"; }
+
+.icon-super-pizzas:before {
+  content: "u"; }
+
+.icon-specialty-pizzas:before {
+  content: "v"; }
+
+.icon-fries-and-poutines:before {
+  content: "w"; }
+
+.icon-pitas-and-sandwiches:before {
+  content: "x"; }
+
+.icon-original-pizzas:before {
+  content: "y"; }
+
+.icon-panzarottis:before {
+  content: "z"; }
+
+.icon-sandwhiches:before {
+  content: "A"; }
+
+.icon-subs:before {
+  content: "B"; }
+
+.icon-burgers:before {
+  content: "C"; }
+
+.icon-donairs:before {
+  content: "D"; }
+
+.icon-fish-and-chips:before {
+  content: "E"; }
+
+.icon-chicken-and-chips:before {
+  content: "F"; }
+
+.icon-xtreme-subs:before {
+  content: "G"; }
+
+.icon-desserts:before {
+  content: "H"; }
+
+.icon-drinks-and-sauces:before {
+  content: "I"; }
+
+.icon-pasta:before {
+  content: "J"; }
+
+.icon-orb-card-cart:before {
+  content: "K"; }
+
+.icon-orb-card-favorite:before {
+  content: "L"; }
+
+.icon-orb-card-share:before {
+  content: "M"; }
+
+.icon-orb-card-register:before {
+  content: "O"; }
+
+.icon-topbar-email:before {
+  content: "P"; }
+
+.icon-topbar-sign-up:before {
+  content: "Q"; }
+
+.icon-orb-card-share-reveal:before {
+  content: "N"; }
+
+.icon-orb-card-register-reveal:before {
+  content: "R"; }
+
+.icon-delivery:before {
+  content: "S"; }
+
+.icon-pick-up:before {
+  content: "T"; }
+
+.stretch {
+  width: 100%; }
+
+.box {
+  position: absolute;
+  left: 0;
+  top: 0; }
+  .box.rightward {
+    left: auto;
+    right: 0; }
+  .box.downward {
+    top: default;
+    bottom: 0; }
+  .box.leftward {
+    top: auto; }
+  .box.rel {
+    position: relative; }
+  .box .abs {
+    left: default;
+    right: default;
+    top: default;
+    bottom: default; }
+
+.noverflow {
+  overflow: hidden; }
+
 meta.foundation-version {
   font-family: "/5.3.3/"; }
 
@@ -33,7 +230,7 @@ html, body {
   box-sizing: border-box; }
 
 html, body {
-  font-size: 100%; }
+  font-size: 0.75rem; }
 
 body {
   background: white;
@@ -43,7 +240,7 @@ body {
   font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
-  line-height: 150%;
+  line-height: 1rem;
   position: relative;
   cursor: default; }
 
@@ -96,7 +293,7 @@ select {
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 0;
-  max-width: 75rem; }
+  max-width: 1200px; }
   .row:before, .row:after {
     content: " ";
     display: table; }
@@ -4236,7 +4433,7 @@ meta.foundation-mq-topbar {
     .top-bar.expanded {
       background: #333333; }
   .contain-to-grid .top-bar {
-    max-width: 75rem;
+    max-width: 1200px;
     margin: 0 auto;
     margin-bottom: 0; }
   .top-bar-section {
@@ -4884,3 +5081,174 @@ th.hide-for-touch {
     display: table-cell !important; }
   th.show-for-print {
     display: table-cell !important; } }
+
+div#menu-editor {
+  padding: 2rem 0 !important; }
+
+table#menu-table tr td:nth-of-type(1), table#menu-table tr th:nth-of-type(1) {
+  width: 135px !important; }
+table#menu-table tr td:nth-of-type(2), table#menu-table tr th:nth-of-type(2) {
+  width: 300px !important; }
+table#menu-table tr td:nth-of-type(3), table#menu-table tr th:nth-of-type(3) {
+  width: 125px !important; }
+table#menu-table tr td:nth-of-type(4), table#menu-table tr th:nth-of-type(4) {
+  width: 125px !important; }
+table#menu-table tr td:nth-of-type(5), table#menu-table tr th:nth-of-type(5) {
+  width: 125px !important; }
+table#menu-table tr td:nth-of-type(6), table#menu-table tr th:nth-of-type(6) {
+  width: 125px !important; }
+table#menu-table tr td:nth-of-type(7), table#menu-table tr th:nth-of-type(7) {
+  width: 125px !important; }
+table#menu-table tr td form, table#menu-table tr th form {
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
+  padding: 1rem;
+  border-radius: 3px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.fade-out {
+  opacity: 0; }
+
+#primary-modal {
+  background-color: white;
+  width: 800px;
+  position: fixed;
+  top: 2rem;
+  left: 0;
+  padding: 2rem;
+  z-index: 9999;
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.7);
+  transition: transform 0.3s ease-out, margin 0.3s ease-out, width 0.3s ease-out, font-size 0.3s ease-out, line-height 0.3s ease-out, padding 0.3s ease-out; }
+  #primary-modal.slide-up {
+    -webkit-transform: translate(0, -2000px);
+    -moz-transform: translate(0, -2000px);
+    -ms-transform: translate(0, -2000px);
+    -o-transform: translate(0, -2000px);
+    transform: translate(0, -2000px); }
+
+li.orbopt.disabled {
+  opacity: 0.5; }
+
+.hidden {
+  display: none !important; }
+
+#close-modal {
+  padding: 1rem; }
+  #close-modal span {
+    display: inline-block;
+    font-size: 0.75rem; }
+  #close-modal:hover span {
+    color: #b4b4b4; }
+  #close-modal.flash span {
+    color: white; }
+    #close-modal.flash span:last-of-type {
+      padding-right: 0.5rem; }
+  #close-modal.flash:hover span {
+    color: #b4b4b4; }
+
+.modal-button {
+  background-color: #0779be;
+  display: inline-block;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 1rem; }
+  .modal-button span {
+    vertical-align: top;
+    font-size: 1rem;
+    display: inline-block;
+    color: white !important; }
+    .modal-button span[class*="icon-"] {
+      -webkit-transform: translateY(0.25rem) !important;
+      font-size: 1.6em;
+      padding-right: 1rem; }
+    .modal-button span[class*="-arrow-"] {
+      padding: 0; }
+    .modal-button span.icon-circle-arrow-l, .modal-button span.icon-tab-arrow-l {
+      float: left; }
+    .modal-button span.icon-circle-arrow-r, .modal-button span.icon-tab-arrow-r {
+      float: right; }
+    .modal-button span.text {
+      -webkit-transform: translateY(0.25rem) !important; }
+    .modal-button span tiny {
+      color: white !important;
+      font-size: 0.75rem; }
+  .modal-button.lrg {
+    padding: 0.75rem; }
+    .modal-button.lrg span {
+      font-size: 1.5rem; }
+  .modal-button.sml {
+    padding: 0.5rem; }
+    .modal-button.sml span {
+      font-size: 0.8rem; }
+      .modal-button.sml span.text {
+        -webkit-transform: translateY(0.4rem) !important; }
+      .modal-button.sml span[class*="icon-"] {
+        -webkit-transform: translateY(0.2rem) !important;
+        font-size: 1.25em; }
+  .modal-button.huge {
+    padding: 2rem; }
+    .modal-button.huge span {
+      font-size: 6.25rem;
+      line-height: 6.25rem; }
+  .modal-button.success {
+    background-color: #43ac6a; }
+    .modal-button.success:hover {
+      background-color: #73c892; }
+  .modal-button.full-width {
+    width: 100%; }
+  .modal-button:hover {
+    background-color: #099bef; }
+  .modal-button.bisecting {
+    width: 50%; }
+    .modal-button.bisecting.rounded:first-of-type {
+      border-top-left-radius: 1000px;
+      border-bottom-left-radius: 1000px; }
+    .modal-button.bisecting.rounded:last-of-type {
+      border-top-right-radius: 1000px;
+      border-bottom-right-radius: 1000px; }
+    .modal-button.bisecting.confirm {
+      width: 66.6666%; }
+    .modal-button.bisecting.cancel {
+      width: 33.3333%; }
+    .modal-button.bisecting.discreet {
+      width: 49%; }
+  .modal-button.cancel {
+    background-color: #b4b4b4; }
+    .modal-button.cancel:hover {
+      background-color: #cecece; }
+      .modal-button.cancel:hover span {
+        color: #e02027 !important; }
+  .modal-button.active {
+    background-color: #faea06; }
+    .modal-button.active span, .modal-button.active tiny {
+      color: #373737 !important; }
+    .modal-button.active:hover {
+      background-color: #cecece; }
+      .modal-button.active:hover span, .modal-button.active:hover tiny {
+        color: #e02027 !important; }
+  .modal-button.disabled, .modal-button.disabled:hover {
+    cursor: default;
+    background-color: #cecece; }
+    .modal-button.disabled span, .modal-button.disabled a, .modal-button.disabled:hover span, .modal-button.disabled:hover a {
+      color: #b4b4b4 !important;
+      text-shadow: none; }
+  .modal-button.secondary {
+    background-color: transparent;
+    padding: 0; }
+    .modal-button.secondary span {
+      font-size: 0.75rem;
+      -webkit-transform: none;
+      color: #373737 !important; }
+      .modal-button.secondary span.text {
+        -webkit-transform: translateY(0.4rem) !important; }
+      .modal-button.secondary span[class*="icon-"] {
+        -webkit-transform: translateY(0.2rem) !important;
+        font-size: 1em; }
+    .modal-button.secondary:hover {
+      background-color: transparent; }
+      .modal-button.secondary:hover span {
+        color: #b4b4b4 !important; }
